objects/Course__c.object
<CustomObject>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DOB__c</fullName>
        <formula>StudentName__r.DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st__c</fullName>
        <label>1st installment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIVIL</fullName>
                </value>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>MECHANICAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COOKING</fullName>
                </value>
                <value>
                    <fullName>DRAWING</fullName>
                </value>
                <value>
                    <fullName>GARDENING</fullName>
                </value>
                <value>
                    <fullName>READING NOVELS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exam_Fee__c</fullName>
        <label>Exam Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Fee__c</fullName>
        <formula>Total_Fee__c  -  Total_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fee__c</fullName>
        <formula>Course_Fee__c + Exam_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Fee__c</fullName>
        <label>Course Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regex_Field__c</fullName>
        <label>Regex Field</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountCourse__c</fullName>
        <formula>StudentName__r.Account.Name +&apos;:&apos;+ Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountCourse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>StudentName__r.Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Exam_Date__c</fullName>
        <label>Last Exam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <formula>Course_Fee__c  *  Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2nd_installment__c</fullName>
        <label>2nd installment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_installment__c</fullName>
        <label>3rd installment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Multiselect</fullName>
        <active>true</active>
        <errorConditionFormula>IF( INCLUDES( Hobbies__c ,&apos;COOKING&apos;) ,1,0) +
IF( INCLUDES( Hobbies__c ,&apos;GARDENING&apos;) ,1,0) +
IF( INCLUDES( Hobbies__c ,&apos;DRAWING&apos;) ,1,0) +
IF( INCLUDES( Hobbies__c ,&apos;READING NOVELS&apos;) ,1,0) &gt;2</errorConditionFormula>
        <errorMessage>you can select only two hobbies</errorMessage>
    </validationRules>
</CustomObject>